log
vi., 16 de may. de 2025 16:59:20: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
3f0e54c
vi., 16 de may. de 2025 17:02:50: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4363160
vi., 16 de may. de 2025 17:12:20: 
 sudoku.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  5|3
total_score: 35/70
0c78181
vi., 16 de may. de 2025 17:51:19: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
Compilation failed
test.c: In function 'DFS':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
d2f638d
vi., 16 de may. de 2025 17:52:09: 
Compilation failed
test.c: In function 'DFS':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
c8b3775
vi., 16 de may. de 2025 17:52:23: 
Compilation failed
test.c: In function 'DFS':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
67bf74d
vi., 16 de may. de 2025 17:53:18: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
2d1dc72
vi., 16 de may. de 2025 17:56:05: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
07288ff
vi., 16 de may. de 2025 17:58:00: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
8ce84a4
vi., 16 de may. de 2025 18:00:00: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
7863186
